# loanlens

./: README.md  pyproject.toml
loanlens/: __init__.py  __main__.py  app.py  config.py
loanlens/cli/: _common.py  amortize.py  backup.py  cert.py  config.py  dashboard.py  emi.py  export.py  loan.py  moratorium.py  od.py  payment.py  rate.py  schedule.py  simulate.py  wizard.py
loanlens/engine/: __init__.py  amortize.py  emi.py  moratorium.py  od.py  schedule.py  simulate.py
loanlens/export/: csv_export.py  markdown_export.py  pdf_export.py
loanlens/models/: __init__.py  analytics.py  loan.py  moratorium.py  od.py  payment.py  rate_revision.py  schedule.py  simulation.py
loanlens/services/: cert_service.py  loan_service.py  od_service.py  schedule_service.py  simulate_service.py
loanlens/store/: __init__.py  base.py  json_store.py  sqlite_store.py
loanlens/ui/: charts.py  formatters.py  panels.py  tables.py
tests/: conftest.py
tests/integration/: test_cli_commands.py  test_loan_lifecycle.py  test_od_flow.py  test_simulate_flow.py
tests/unit/engine/: test_amortize.py  test_emi.py  test_moratorium.py  test_od.py  test_schedule.py  test_simulate.py
tests/unit/models/: test_models.py
tests/unit/store/: test_json_store.py  test_sqlite_store.py
